<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="60dp"
    tools:context=".SecondActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/red"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="7dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/red" />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/blue"
        android:id="@+id/blue"
        android:layout_marginTop="20dp"
        android:layout_marginRight="6dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/green"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/green" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/cyan"
            android:id="@+id/cyan"
            android:layout_marginTop="20dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/magenta"
            android:id="@+id/magenta"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/black"
            android:id="@+id/black"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="45dp"
        android:text="@string/set_color" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="71dp"
        android:onClick="cancel"
        android:text="@string/cancel_color" />


</RelativeLayout>